sumo/tests/netgen/errors/grid_spider_and_random/errors.netgen
Error: You may specify only one type of network to generate at once.
Quitting (on error).
